--- a/templates/galeria/imagem.html
+++ b/templates/galeria/imagem.html
@@ -5,12 +5,12 @@
 <section class="conteudo">
     <section class="imagem">
         <div class="imagem__conteudo">
-            <img class="imagem__imagem" src="{% static '/assets/imagens/galeria/'%}{{ fotografia.foto }}">
+            <img class="imagem__imagem" src="{{ fotografia.foto.url }}">
             <div class="imagem__info">
                 <div class="imagem__texto">
                     <p class="imagem__titulo">{{ fotografia.nome }}</p>
                     <p class="imagem__descricao">{{ fotografia.legenda }}</p>
-                    <p class="imagem__texto"></p>
+                    <p class="imagem__texto"> {{ fotografia.descricao }} </p>
                 </div>
             </div>
         </div>
