--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -22,17 +22,19 @@
             <ul class="cards__lista">
                 {% if cards %}
                 {% for fotografia in cards %}
+                {% if cards %}
+                {% for fotografia in cards %}
                 <li class="card">
                     <a href="{% url 'imagem' fotografia.id %}">
-                        <img class="card__imagem" src="{% static '/assets/imagens/galeria/'%}{{ fotografia.foto }}" alt="foto" height="350px">
+                        <img class="card__imagem" src="{{ fotografia.foto.url }}" alt="foto" height="350px">
                     </a>
                     <span class="card__tag">Estrelas</span>
                     <div class="card__info">
-                        <p class="card__titulo">{{ fotografia.nome }}</p>
+                        <p class="card__titulo">{{ fotografia.nome}}</p>
                         <div class="card__texto">
                             <p class="card__descricao">{{ fotografia.legenda }}</p>
                             <span>
-                                <img src="{% static '/assets/ícones/1x/favorite_outline.png'%}" alt="ícone de coração">
+                                <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
                             </span>
                         </div>
                     </div>
