criação do arquivo usuarios/form.py para login e cadastro

--- a/templates/usuarios/base.html
+++ b/templates/usuarios/base.html
@@ -8,11 +8,11 @@
 <body>
     <div class="pagina-inicial">
         
-        {% include "usuarios/partials/_header.html" %}
+        {% include "galeria/partials/_header.html" %}
         
         <main class="principal">
             
-            {% include "usuarios/partials/_menu.html" %}
+            {% include "galeria/partials/_menu.html" %}
 
             {% block content %}{% endblock  %}
 
