validação de cadastro e login

--- a/templates/usuarios/cadastro.html
+++ b/templates/usuarios/cadastro.html
@@ -13,7 +13,7 @@
 
             {% block content %}
             <section class="galeria" style="margin-left: 5em">
-                <form action="" method="">
+                <form action="{% url 'cadastro' %}" method="POST">
 
                     {% csrf_token %}
                     <div class="row">
