--- a/templates/usuarios/cadastro.html
+++ b/templates/usuarios/cadastro.html
@@ -18,6 +18,13 @@
                             <label for="{{ field.id_for_label }}" style="color:#D9D9D9; margin-bottom: 5px;" >{{ field.label }}</label>
                             {{ field }}
                         </div>
+                        {% for error in field.errors %}
+                        <div class="col-12 col-lg-12" style="margin-bottom: 10px;">
+                            <div class="alert" style="margin-bottom: 10px;">
+                            {{ error }}
+                            </div>
+                        </div>
+                        {% endfor %}
                         {% endfor %}
                         <div class="col-12 text-center">
                             <button class="btn btn-success col-12" style="padding: top 5px;" type="submit">Cadastrar</button>
